# raytrace-cli

./: Cargo.toml  LICENSE  README.md
examples/: color_mixer.rs
src/: camera.rs  character.rs  color.rs  lib.rs  main.rs  ray.rs  render_spec.rs  render_target.rs  utils.rs  world.rs
src/materials/: dielectric.rs  diffuse_materials.rs  material.rs  metal.rs  mod.rs
src/output/: character.rs  image_saver.rs  mod.rs  render_target.rs
src/test_utils/: material.rs  mod.rs
src/world/: containers.rs  hittable.rs  intersectable.rs  mod.rs  plane.rs  scene.rs  sphere.rs
