[package]
name = "raytrace_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "0.7.3"
glam = "0.25.0"
image = "0.24.7"
indicatif = {version = "0.17.6", features = ["rayon"]}
rand = "0.8.5"
rayon = "1.8.0"
